fix(styles): minor style fixes, remove jumpyness

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,8 +13,9 @@
 .App-crop-result-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  span {
-    margin: 20px 0;
-  }
+  height: 1000px;
+}
+
+span {
+  margin: 20px 0;
 }
